syntax = "proto3";

package nibiru.dex.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/NibiruChain/nibiru/x/spot/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  // The start pool number, i.e. the first pool number that isn't taken yet.
  uint64 starting_pool_number = 1;

  // The cost of creating a pool, taken from the pool creator's account.
  repeated cosmos.base.v1beta1.Coin pool_creation_fee = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags) = "yaml:\"pool_creation_fee\"",
    (gogoproto.nullable) = false
  ];

  // The assets that can be used to create liquidity pools
  repeated string whitelisted_asset = 3;
}
